# mcp2anp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTH_EXAMPLE.md  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  ClaudeCode+K2+mcp2anp.md  ENV_CONFIG.md  Makefile  QUICKSTART.md  README.md  REFACTORING_SUMMARY.md  SESSION_IMPLEMENTATION_SUMMARY.md  STATEFUL_SESSION_CHANGES.md  STATEFUL_SESSION_README.md  pyproject.toml  run_tests.sh  spec.md  uv.toml
docs/: AUTH_TESTING.md  REMOTE_SERVER.md  SESSION_LIFECYCLE.md  STATEFUL_SESSION.md  server_http.md  server_remote.md  usage.md
docs/blog/: mcp2anp-design-philosophy.md
docs/examples/: anp-agent-description.example.json  did-document.example.json  openrpc-interface.example.json  private-key.example.pem
examples/: AP2_QUICKSTART.md  README.md  SDK_MIGRATION.md  create_did_example.py  did-example.json  did-private-key.pem  mcp_ap2_client_demo.py  mcp_client_demo.py  merchant_server.py  test_example.py  test_individual_tools.py  test_multi_session.py  test_remote_auth.py  test_remote_functionality.py  test_remote_server.py  test_remote_simple.py  test_server_http.py  test_stateful_session.py  test_tools.py  test_with_local_server.py
mcp2anp/: __init__.py  __main__.py  ap2_server.py  server.py  server_http.py  server_remote.py  session.py
mcp2anp/adapters/: __init__.py  anp_client.py  openrpc_adapter.py
mcp2anp/auth/: __init__.py
mcp2anp/core/: handlers.py
mcp2anp/tools/: __init__.py  fetch_doc.py
mcp2anp/utils/: logging.py  models.py
src/mcp2anp/: mcp_types.py  server.py
src/mcp2anp/adapters/: anp_client.py  openrpc_adapter.py
src/mcp2anp/auth/: did_auth.py  session_manager.py
src/mcp2anp/tools/: fetch_doc.py  invoke_openrpc.py  set_auth.py
src/mcp2anp/utils/: __init__.py  logging.py  models.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_server.py
tests/unit/: __init__.py  test_session_manager.py  test_tools.py
